--- a/src/app/components/adavanced-search/adavanced-search.component.scss
+++ b/src/app/components/adavanced-search/adavanced-search.component.scss
@@ -1,6 +1,6 @@
 mat-card {
     width: 100%;
-    max-width: 600px; 
+    max-width: 600px;
     margin: 0 auto;
 }
 
@@ -13,19 +13,18 @@ mat-card {
 .mat-column-profil span {
     position: relative;
     right: .5em;
-    bottom: .5em;
     padding: .5em;
 }
 
 .mat-row:hover {
-    background-color: #f5f5f5; 
-    cursor: pointer; 
+    background-color: #f5f5f5;
+    cursor: pointer;
 }
 
 .mat-table {
-    width: 100%; 
-    max-width: 1200px; 
-    margin: 0 auto; 
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 .gold {
@@ -33,7 +32,7 @@ mat-card {
 }
 
 .argent {
-    fill: #424242 !important; 
+    fill: #424242 !important;
 }
 
 .bronze {
@@ -50,4 +49,65 @@ mat-card {
 
 .space-between-records {
     margin: 1em 0 1em 0;
+}
+
+.btn-outline-success {
+    border: 1px solid rgb(69, 158, 114);
+    color: rgb(69, 158, 114);
+}
+
+.me-2 {
+    margin-right: .5em;
+}
+
+.me-3 {
+    margin-right: 1em;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.mt-0 {
+    margin-top: 0 !important;
+}
+
+.mt-2 {
+    margin-top: 0.5em !important;
+}
+
+.mb-0 {
+    margin-bottom: 0 !important;
+}
+
+.mb-2 {
+    margin-bottom: 0.5rem !important;
+}
+
+.mb-3 {
+    margin-bottom: 1rem !important;
+}
+
+.p-3 {
+    padding: 1rem !important;
+}
+
+.box-shadow-large {
+    box-shadow: 0 0 12px rgba(0, 0, 0, 0.1);
+}
+
+.border-avatar {
+    border: 1px solid #d7e5e7;
+}
+
+.border-radius-10 {
+    border-radius: 10px;
+}
+
+.font-weight-700 {
+    font-weight: 700;
+}
+
+.bg-light {
+    background-color: rgba(248, 249, 250, 1) !important;
 }
