--- a/src/app/components/adavanced-search/search-bar/search-bar.component.scss
+++ b/src/app/components/adavanced-search/search-bar/search-bar.component.scss
@@ -1,5 +1,5 @@
 ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
-    border-radius: 0 !important;
+  border-radius: 0 !important;
 }
 
 ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-start,
@@ -11,13 +11,13 @@
 ::ng-deep .mat-form-field-appearance-outline.mat-focused .mat-form-field-outline-end {
   border-radius: 0 !important;
 }
-  
+
 
 button.mat-flat-button {
- border-radius: 0 !important;
+  border-radius: 0 !important;
 }
-  
- 
+
+
 .mat-form-field-appearance-outline .mat-form-field-flex {
   margin-top: 0 !important;
 }
@@ -25,20 +25,20 @@ button.mat-flat-button {
 button.mat-flat-button {
   height: 50px;
 }
-  
-  
+
+
 mat-form-field {
   flex-grow: 1;
 }
-  
+
 mat-form-field:first-child {
   min-width: 300px;
 }
-  
+
 mat-form-field:nth-child(2) {
   min-width: 150px;
 }
-  
+
 button {
   height: 50px;
   position: relative;
@@ -47,7 +47,73 @@ button {
 }
 
 .icon-style {
-    font-size: larger;
-    position: relative;
-    bottom: 4px;
+  font-size: larger;
+  position: relative;
+  bottom: 4px;
+}
+
+.clearIcon {
+  cursor: pointer
+}
+
+.highlight {
+  color: #17b7c7;
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  /* Vertically center items */
+  gap: 10px;
+  /* Space between the icon and content */
+  padding-left: 0;
+}
+
+.content {
+  display: inline-block;
+}
+
+#icon {
+  font-size: 20px;
+  /* Adjust size as needed */
+  color: #333;
+  /* Adjust color as needed */
+  line-height: 1;
+  /* Adjust line-height if needed */
+  vertical-align: middle;
+  /* Ensure icon is vertically centered with text */
+}
+
+.mat-option span {
+  font-size: 15px;
+  margin: 0;
+  line-height: 0.90rem;
+  position: relative;
+}
+
+.mat-option p {
+  position: relative;
+  font-size: 10px;
+  z-index: 1;
+  margin: 0.05rem 0 0;
+  overflow-wrap: break-word;
+  /* Break long words */
+  word-break: break-word;
+  /* Alternative option */
+  white-space: normal;
+  /* Ensure normal text wrapping */
+}
+
+::-webkit-scrollbar {
+  width: 14px;
+}
+
+::-webkit-scrollbar-thumb {
+  border: 4px solid rgba(0, 0, 0, 0);
+  background-clip: padding-box;
+  border-radius: 9999px;
+  background-color: #AAAAAA;
+  cursor: pointer;
 }
