--- a/src/app/components/adavanced-search/search-bar/search-bar.component.html
+++ b/src/app/components/adavanced-search/search-bar/search-bar.component.html
@@ -35,7 +35,7 @@
                 <div class="container">
                     <i id="icon" class='far fa-hospital'></i>
                     <div class="content">
-                        <span [innerHTML]="(option.name || '') | highlight: toHighlight : 'highlight'" style="margin-right: 5px;"></span>
+                        <span [innerHTML]="(option.name || '') | highlight: toHighlight : 'highlight'" style="margin-right: 5px;"git chec></span>
                         <i id="R" class="fas fa-r"></i>
                         <i id="trophy" class='fas fa-trophy'></i>
                         <p>{{option.city}}</p>
