--- a/src/app/components/adavanced-search/search-bar/search-bar.component.scss
+++ b/src/app/components/adavanced-search/search-bar/search-bar.component.scss
@@ -51,3 +51,80 @@ button {
     position: relative;
     bottom: 4px;
 }
+
+.clearIcon {
+  cursor:pointer
+}
+
+.highlight {
+  color: #17b7c7; 
+  font-weight: bold; 
+  text-decoration: underline;
+}
+
+.container {
+  display: flex;
+  align-items: center; 
+  gap: 10px; 
+  padding-left: 0;
+}
+
+.content {
+  display: inline-block;
+}
+#icon {
+  font-size: 20px; 
+  color: #333; 
+  line-height: 1; 
+  vertical-align: middle; 
+}
+
+.mat-option span {
+	font-size: 15px;
+	margin: 0;
+	line-height: 0.90rem;
+	position: relative;
+}
+
+.mat-option p {
+	position: relative;
+	font-size: 10px;
+	z-index: 1;
+	margin: 0.05rem 0 0;
+  overflow-wrap: break-word;
+            word-break: break-word;
+            white-space: normal; 
+}
+
+::-webkit-scrollbar {
+  width: 14px;
+}
+
+::-webkit-scrollbar-thumb {
+  border: 4px solid rgba(0, 0, 0, 0);
+  background-clip: padding-box;
+  border-radius: 9999px;
+  background-color: #AAAAAA;
+  cursor: pointer;
+}
+
+.mat-option .container .content #R {
+  position: relative;
+  font-size: 6px;
+  border-radius: 50%;
+  padding-left: 3px;
+  padding-right: 3px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  color: rgb(69, 158, 114);
+  border: 1px solid rgb(69, 158, 114);
+  margin-right: 3px;
+  top: -2px;
+}
+
+.mat-option .container .content #trophy {
+  position: relative;
+  font-size: 8px;
+  color: rgb(209, 180, 14);
+  top: -2px;
+}
