--- a/src/app/components/adavanced-search/adavanced-search.component.html
+++ b/src/app/components/adavanced-search/adavanced-search.component.html
@@ -133,7 +133,7 @@
     </ng-container>
 
     <mat-paginator [ngStyle]="{'display': !showDetail ? 'block' : 'none'}" [pageSize]="5"
-        [pageSizeOptions]="[10, 25, 50, 100]" showFirstLastButtons itemsPerPageLabel="Données par page">
+        [pageSizeOptions]="[5, 10, 25, 50, 100]" showFirstLastButtons itemsPerPageLabel="Données par page">
     </mat-paginator>
 </mat-card>
 
