review advanced search

--- a/src/app/components/adavanced-search/adavanced-search.component.scss
+++ b/src/app/components/adavanced-search/adavanced-search.component.scss
@@ -130,3 +130,15 @@ mat-card {
 #trophy {
     color: rgb(209, 180, 14);
 }
+
+.record-label {
+    color: hsl(198, 11%, 45%);
+    font-weight: 400;
+    font-size: .9em;
+}
+
+.record-value {
+    color: hsl(200, 10%, 17%);
+    font-weight: 400;
+    font-size: 1em;
+}
