--- a/src/app/components/adavanced-search/search-bar/search-bar.component.html
+++ b/src/app/components/adavanced-search/search-bar/search-bar.component.html
@@ -73,5 +73,5 @@
         </mat-autocomplete>
         <mat-icon *ngIf="location" (click)="clearOuField()" class="clearIcon" matSuffix>clear</mat-icon>
     </mat-form-field>
-    <button mat-flat-button color="primary" (click)="onSearch()">RECHERCHER</button>
+    <button class="btn-position" fxFlex mat-flat-button color="primary" (click)="onSearch()">RECHERCHER</button>
 </div>
