--- a/src/app/components/adavanced-search/adavanced-search.component.html
+++ b/src/app/components/adavanced-search/adavanced-search.component.html
@@ -1,141 +1,165 @@
-<mat-card style="max-width: 900px;">
+<mat-card style="min-width: 1000px;">
     <app-search-bar [data]="combinedDatas" *ngIf="combinedDatas"
         (newItemEvent)="getItemsFromChild($event)"></app-search-bar>
+
     <ng-container *ngIf=" !isLoading; else waitTemplate">
-        <div *ngIf="!showDetail">
-            <div fxLayout="row" class="space-between-records" fxLayoutAlign="start center">
-                <span class="space-between-elements">Afficher uniquement</span>
-                <mat-checkbox color="primary" class="space-between-elements" [(ngModel)]="showReceivers"
-                    (change)="showData()">RECEVEURS</mat-checkbox>
-                <mat-checkbox color="primary" class="space-between-elements" [(ngModel)]="showPractitioners"
-                    (change)="showData()">PRATICIENS</mat-checkbox>
-                <mat-checkbox color="primary" class="space-between-elements" [(ngModel)]="showHospitals"
-                    (change)="showData()">ETABLISSEMENTS</mat-checkbox>
-            </div>
-            <div fxLayout="row" class="space-between-records">
-                <span class="space-between-elements">Trier par</span>
-                <mat-radio-group [(ngModel)]="sortBy" (change)="applySort()">
-                    <mat-radio-button color="primary" class="space-between-elements"
-                        value="lastName">Nom</mat-radio-button>
-                    <mat-radio-button color="primary" class="space-between-elements"
-                        value="firstName">Prénom</mat-radio-button>
-                    <mat-radio-button color="primary" class="space-between-elements"
-                        value="specialty">Spécialité</mat-radio-button>
-                    <mat-radio-button color="primary" class="space-between-elements"
-                        value="distance">Distance</mat-radio-button>
-                </mat-radio-group>
-            </div>
-            <div fxLayout="row" class="space-between-records">
-                <mat-chip-list>
-
-                    <mat-chip *ngFor="let chip of chips; let indx = index;" (removed)="removeChip(indx)">
-                        {{ chip.name }}
-                        <mat-icon matChipRemove *ngIf="chip">cancel</mat-icon>
-                    </mat-chip>
-
-                    <span class="spacer"></span>
-                    <button *ngIf="chips.length > 0" mat-button color="primary" (click)="removeAllFilters()">Supprimer
-                        tous
-                        les filtres</button>
-                </mat-chip-list>
-            </div>
-            <table mat-table [dataSource]="dataSource" class="mat-elevation-z4">
-                <ng-container matColumnDef="profil">
-                    <th mat-header-cell *matHeaderCellDef></th>
-                    <td mat-cell *matCellDef="let element">
-                        <div *ngIf="element.profil == 'hospital'" fxLayoutAlign="start center" class="me-2">
-                            <i class="far fa-hospital fa-2x me-2"></i>
-                        </div>
-                        <div *ngIf="element.profil == 'speciality'" fxLayoutAlign="start center" class="me-2">
-                            <i class="fas fa-award fa-2x me-2"></i>
-                        </div>
-                        <div *ngIf="element.profil == 'person'" fxLayoutAlign="start center" class="me-2">
-                            <i class="far fa-user fa-2x me-3"></i>
-                            <span>Dr</span>
-                        </div>
-                    </td>
-                </ng-container>
-
-                <ng-container matColumnDef="identite">
-                    <th mat-header-cell *matHeaderCellDef> Identité </th>
-                    <td mat-cell *matCellDef="let element"> {{element.identite}} </td>
-                </ng-container>
-
-
-                <ng-container matColumnDef="specialite">
-                    <th mat-header-cell *matHeaderCellDef> Spécialité(s) </th>
-                    <td mat-cell *matCellDef="let element"> {{element.specialite}} </td>
-                </ng-container>
-
-                <ng-container matColumnDef="structure">
-                    <th mat-header-cell *matHeaderCellDef> Structure de soin </th>
-                    <td mat-cell *matCellDef="let element"> {{element.structure}} </td>
-                </ng-container>
-
-
-                <ng-container matColumnDef="localisation">
-                    <th mat-header-cell *matHeaderCellDef> Localisation </th>
-                    <td mat-cell *matCellDef="let element"> {{element.localisation}} </td>
-                </ng-container>
-
-                <ng-container matColumnDef="distance">
-                    <th mat-header-cell *matHeaderCellDef> Distance </th>
-                    <td mat-cell *matCellDef="let element"> {{element.distance}} </td>
-                </ng-container>
-
-                <ng-container matColumnDef="actions">
-                    <th mat-header-cell *matHeaderCellDef></th>
-                    <td mat-cell *matCellDef="let element">
-                        <div style="display: flex;">
-                            <button mat-icon-button class="btn-outline-success">
-                                <i id="R" class="fas fa-r"></i>
-                            </button>
-                            <button mat-icon-button><i id="trophy" class='fas fa-trophy'></i></button>
-                            <button mat-icon-button><mat-icon>star_border</mat-icon></button>
-                        </div>
-                    </td>
-                </ng-container>
-
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            </table>
-        </div>
-        <div *ngIf="showDetail">
-            <div fxLayout="row">
-                <div class="box-shadow-large p-3 border-radius-10" fxFlex="50%">
-                    <div class="mb-3 text-center">
-                        <img style="max-width: 300px;" alt="Photo of a doctor" class="border-radius-10 border-avatar"
-                            src="./assets/img/userPictures/user.png">
-                    </div>
-                    <div class="bg-light p-3 border-radius-10">
-                        <h3 class="mt-0">Dr. {{ dataPerson.firstName }} {{ dataPerson.lastName }}</h3>
-                        <p class="mb-2"> {{ dataPerson.speciality }}</p>
-                        <p class="mb-0 font-weight-700">{{ dataPerson.location }}</p>
-                    </div>
-                </div>
-                <div class="p-3" fxFlex="50%">
-                    <div>
-                        <button mat-icon-button class="me-2"><mat-icon>emoji_events</mat-icon></button>
-                        <button mat-icon-button class="me-2"><mat-icon>star_border</mat-icon></button>
-                    </div>
-                    <p><span class="font-weight-700">RPPS :</span> {{ dataPerson.rpps }}</p>
-                    <div fxLayout="row">
-                        <mat-icon class="me-2">phone</mat-icon>
-                        <p class="mt-2">{{ dataPerson.phone }}</p>
-                    </div>
-                    <div fxLayout="row">
-                        <mat-icon class="me-2">email</mat-icon>
-                        <p class="mt-2">{{ dataPerson.email }}</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <ng-container [ngSwitch]="showDetail">
+            <ng-container *ngSwitchCase="true">
+                <ng-container *ngTemplateOutlet="userCardTemplate"></ng-container>
+            </ng-container>
+            <ng-container *ngSwitchCase="false">
+                <ng-container *ngTemplateOutlet="listingTemplate"></ng-container>
+            </ng-container>
+        </ng-container>
     </ng-container>
 
     <mat-paginator [ngStyle]="{'display': !showDetail ? 'block' : 'none'}" [pageSize]="5"
         [pageSizeOptions]="[5, 10, 25, 50, 100]" showFirstLastButtons itemsPerPageLabel="Données par page">
     </mat-paginator>
 </mat-card>
+
+<ng-template #userCardTemplate>
+    <div fxLayout="row">
+        <div class="box-shadow-large p-3 border-radius-10" fxFlex="50%">
+            <div class="mb-3 text-center">
+                <img style="max-width: 300px;" alt="Photo of a doctor" class="border-radius-10 border-avatar"
+                    src="./assets/img/userPictures/user.png">
+            </div>
+            <div class="bg-light p-3 border-radius-10">
+                <h3 class="mt-0">Dr. {{ dataPerson.firstName }} {{ dataPerson.lastName }}</h3>
+                <p class="mb-2"> {{ dataPerson.speciality }}</p>
+                <p class="mb-0 font-weight-700">{{ dataPerson.location }}</p>
+            </div>
+        </div>
+        <div class="p-3" fxFlex="50%" fxLayout="column" fxLayoutGap="1em">
+            <div>
+                <button mat-icon-button class="me-2"><mat-icon>emoji_events</mat-icon></button>
+                <button mat-icon-button class="me-2"><mat-icon>star_border</mat-icon></button>
+            </div>
+            <div fxLayout="row">
+                <dt class="record-label" fxFlex="35">RPPS :</dt>
+                <dd class="record-value">{{ dataPerson.rpps }}</dd>
+            </div>
+            <div fxLayout="row">
+                <dt class="record-label" fxFlex="35">Numéro de téléphone :</dt>
+                <dd class="record-value">{{ dataPerson.phone }}</dd>
+            </div>
+            <div fxLayout="row">
+                <dt class="record-label" fxFlex="35">Etablissement : </dt>
+                <dd class="record-value">{{ dataPerson.medicalStructureName }}</dd>
+            </div>
+            <div fxLayout="row">
+                <dt class="record-label" fxFlex="35">Adresse : </dt>
+                <dd class="record-value">{{ dataPerson.address }}</dd>
+            </div>
+            <div fxLayout="row">
+                <dt class="record-label" fxFlex="35">Email :</dt>
+                <dd class="record-value">{{ dataPerson.email }}</dd>
+            </div>
+            <div fxLayout="row">
+                <dt class="record-label" fxFlex="35">Site web :</dt>
+                <dd class="record-value">{{ dataPerson.website }}</dd>
+            </div>
+        </div>
+    </div>
+</ng-template>
+
+<ng-template #listingTemplate>
+    <div fxLayout="row" class="space-between-records" fxLayoutAlign="start center">
+        <span class="space-between-elements">Afficher uniquement</span>
+        <mat-checkbox color="primary" class="space-between-elements" [(ngModel)]="showReceivers"
+            (change)="showData()">RECEVEURS</mat-checkbox>
+        <mat-checkbox color="primary" class="space-between-elements" [(ngModel)]="showPractitioners"
+            (change)="showData()">PRATICIENS</mat-checkbox>
+        <mat-checkbox color="primary" class="space-between-elements" [(ngModel)]="showHospitals"
+            (change)="showData()">ETABLISSEMENTS</mat-checkbox>
+    </div>
+    <div fxLayout="row" class="space-between-records">
+        <span class="space-between-elements">Trier par</span>
+        <mat-radio-group [(ngModel)]="sortBy" (change)="applySort()">
+            <mat-radio-button color="primary" class="space-between-elements" value="lastName">Nom</mat-radio-button>
+            <mat-radio-button color="primary" class="space-between-elements" value="firstName">Prénom</mat-radio-button>
+            <mat-radio-button color="primary" class="space-between-elements"
+                value="specialty">Spécialité</mat-radio-button>
+            <mat-radio-button color="primary" class="space-between-elements"
+                value="distance">Distance</mat-radio-button>
+        </mat-radio-group>
+    </div>
+    <div fxLayout="row" class="space-between-records">
+        <mat-chip-list>
+
+            <mat-chip *ngFor="let chip of chips; let indx = index;" (removed)="removeChip(indx)">
+                {{ chip.name }}
+                <mat-icon matChipRemove *ngIf="chip">cancel</mat-icon>
+            </mat-chip>
+
+            <span class="spacer"></span>
+            <button *ngIf="chips.length > 0" mat-button color="primary" (click)="removeAllFilters()">Supprimer
+                tous
+                les filtres</button>
+        </mat-chip-list>
+    </div>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z4">
+        <ng-container matColumnDef="profil">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let element">
+                <div *ngIf="element.profil == 'hospital'" fxLayoutAlign="start center" class="me-2">
+                    <i class="far fa-hospital fa-2x me-2"></i>
+                </div>
+                <div *ngIf="element.profil == 'speciality'" fxLayoutAlign="start center" class="me-2">
+                    <i class="fas fa-award fa-2x me-2"></i>
+                </div>
+                <div *ngIf="element.profil == 'person'" fxLayoutAlign="start center" class="me-2">
+                    <i class="far fa-user fa-2x me-3"></i>
+                    <span>Dr</span>
+                </div>
+            </td>
+        </ng-container>
+
+        <ng-container matColumnDef="identite">
+            <th mat-header-cell *matHeaderCellDef> Identité </th>
+            <td mat-cell *matCellDef="let element"> {{element.identite}} </td>
+        </ng-container>
+
+
+        <ng-container matColumnDef="specialite">
+            <th mat-header-cell *matHeaderCellDef> Spécialité(s) </th>
+            <td mat-cell *matCellDef="let element"> {{element.specialite}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="structure">
+            <th mat-header-cell *matHeaderCellDef> Structure de soin </th>
+            <td mat-cell *matCellDef="let element"> {{element.structure}} </td>
+        </ng-container>
+
+
+        <ng-container matColumnDef="localisation">
+            <th mat-header-cell *matHeaderCellDef> Localisation </th>
+            <td mat-cell *matCellDef="let element"> {{element.localisation}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="distance">
+            <th mat-header-cell *matHeaderCellDef> Distance </th>
+            <td mat-cell *matCellDef="let element"> {{element.distance}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let element">
+                <div style="display: flex;">
+                    <button mat-icon-button class="btn-outline-success">
+                        <i id="R" class="fas fa-r"></i>
+                    </button>
+                    <button mat-icon-button><i id="trophy" class='fas fa-trophy'></i></button>
+                    <button mat-icon-button><mat-icon>star_border</mat-icon></button>
+                </div>
+            </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+</ng-template>
 
 <ng-template #waitTemplate>
     <mat-card-content fxLayout="column" fxLayoutAlign="center center">
